# pjm-grid-ops

./: .gitignore  05_dm_test.R  DECISIONS.md  README.md  main.py  pjm-grid-ops.Rproj  pyproject.toml
excel/: peak_savings_model.xlsx
extracts/: backtest_outcomes.csv  classifier_backtest_raw.csv  classifier_nested_by_summer.csv  error_regime.csv  ev_bootstrap.csv  gam_test_2023.csv  gpd_params.csv  noise_stress_raw.csv  rule_baseline_by_summer.csv  summer_days.csv
ingest/: build_features.py  build_mart.py  check_features.py  eia_historical.py  eia_metadata.py  ghcnh_historical.py  load_eia_duckdb.py  load_weather_duckdb.py
r/: 01_load_and_check.R  02_baseline.R  03_gam.R  04_regimes.R  06_evt.R  07_rule_baseline.R  08_classifier.R  09_stress_tests.R  10_dashboard_extracts.R
sql/: 00_initialize.sql  20_build_eia_staging.sql  30_build_weather_staging.sql  40_build_mart.sql
tests/: test_eia_historical.py  test_eia_warehouse.py  test_ghcnh_historical.py
